second oneway commit

--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
   <nav>
     <h1>✈️ SkyReserve</h1>
     <div>
-      <a href="http://localhost/SkyReserveARS/viewbooking.php">Check Bookings</a>
       <a href="http://localhost/SkyReserveARS/managebooking.php">Manage Booking</a>
+      <a href="http://localhost/SkyReserveARS/about_us.php">About Us</a>
+
     </div>
   </nav>
 
