--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
   <nav>
     <h1>✈️ SkyReserve</h1>
     <div>
+      <a href="http://localhost/SkyReserveARS/index.html">Home</a>
       <a href="http://localhost/SkyReserveARS/managebooking.php">Manage Booking</a>
       <a href="http://localhost/SkyReserveARS/about_us.php">About Us</a>
 
